--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install && cd ../Client && npm install && npm run build",
+    "server": "npx nodemon server.js"
   },
   "keywords": [],
   "author": "",
