--- a/Client/package.json
+++ b/Client/package.json
@@ -17,9 +17,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
-    "react-router-dom": "^6.23.0",
-    "react-scrollbar": "^0.5.6",
-    "tailwind-scrollbar": "^3.1.0"
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
