--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.11.1",
     "lodash": "^4.17.21",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
