--- a/Server/package.json
+++ b/Server/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.11.1",
+    "nodemailer": "^6.9.13",
     "puppeteer": "^22.7.1"
   },
   "devDependencies": {
