--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-phone-input-2": "^2.15.1",
